@@ -1,5 +1,12 @@
 2009-03-02  Eric B. Weddington  <eric.weddington@atmel.com>
 
+	* crt1/gcrt1.S (__init): Clear RAMPD, RAMPX, RAMPY, RAMPZ registers
+	conditional on __AVR_HAVE_RAMPD__.
+	* include/avr/common.h (AVR_RAMPD_REG, AVR_RAMPD_ADDR, AVR_RAMPX_REG,
+	AVR_RAMPX_ADDR, AVR_RAMPY_REG, AVR_RAMPY_ADDR): Add definitions.
+
+2009-03-02  Eric B. Weddington  <eric.weddington@atmel.com>
+
 	* crt1/gcrt1.S (__do_copy_data): Make clearing of RAMPZ at end
 	conditional on __AVR_HAVE_RAMPD__ (currently avrxmega3, avrxmega5,
 	and avrxmega7 architectures). These architectures can access > 64K RAM,
